fix image group alignment and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,8 @@ button {
 
 .image-container {
     display: flex;
+    justify-content: center;
+    gap: 48px;
 }
 
 .image-info {
